# fast_api_ddd_project

./: Makefile  README.md  pyproject.toml
store/: main.py  routers.py
store/controllers/: product.py
store/core/schemas/: product.py
store/model/: base.py  product_model.py
store/usecases/: product.py
tests/: conftest.py
tests/controllers/: test_controller_product.py
tests/schemas/: factories.py  test_product.py
tests/usecases/: test_product.py
