[tool.poetry]
name = "store"
version = "0.1.0"
description = "Fast API DDD e Mongodb - BOOT CAMP PYTHON BACK END IA DIO E VIO"
authors = ["edmaker89 <edmaker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.7.0"
pymongo = "^4.7.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]
xfail_strict = true
junit_family = "xunit2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
